[project]
name = "env-scic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=36.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "mpmath>=1.3.0",
    "nbformat>=4.2.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "sympy>=1.13.3",
]
